# COVID19-Search-Engine

./: AVLIndex.cpp  AVLIndex.h  AVLTree.h  CMakeLists.txt  DocumentParser.cpp  DocumentParser.h  HashIndex.cpp  HashIndex.h  HashTable.h  IndexHandler.cpp  IndexHandler.h  IndexInterface.h  Porter2_Stemmer.cpp  Porter2_Stemmer.h  QueryParser.cpp  QueryParser.h  README.md  SearchEngine.cpp  SearchEngine.h  StopWords.cpp  StopWords.h  UserInterface.cpp  UserInterface.h  Words.cpp  Words.h  main.cpp
